[package]
name = "botflox_alltalks"
version = "0.1.0"
authors = ["RoboSky <robotbrainify@github.com>"]
edition = "2018"

[dependencies]
serenity = "0.5"
reqwest = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.8.9"

typemap = "0.3"

strum = "0.15.0"
strum_macros = "0.15.0"