[package]
name = "botflox_alltalks"
version = "0.1.0"
authors = ["RoboSky <robotbrainify@github.com>", "ash lea <ashlea@protonmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.8.9"
serenity = "0.6.0-rc.1"
ctrlc = { version = "3.1.2", features = ["termination"] }
strum = "0.15.0"
strum_macros = "0.15.0"
typemap = "0.3"
